display bug onhome on firefox

--- a/app/assets/stylesheets/components/_info.scss
+++ b/app/assets/stylesheets/components/_info.scss
@@ -14,7 +14,7 @@
     margin-bottom: 10px;
   }
   #live-text {
-    width: 60%;
+    width: 100%;
     h1 {
       font-size: $font-size-h4;
       margin: 11px 0px 30px 0px;
