--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,11 +14,7 @@
   .banner-content {
     position: absolute;
     top: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     text-align: center;
-    align-items: center;
     color: $home-font-color;
     padding: 0 10px;
     h1, h2, h3, p {
